--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -228,10 +228,10 @@
   "notification.challengeRoleUpdated.content": "Vai trò của bạn trong thử thách '{{challengeName}}' đã được cập nhật thành: {{role}}",
   "notification.challengeStarted.title": "Thử thách '{{challengeName}}' đã bắt đầu!",
   "notification.challengeStarted.content": "Hãy sẵn sàng chinh phục thử thách '{{challengeName}}' cùng GoBeyond!",
-  "notification.evidence.approved.title": "Bằng chứng ngày {{day}} đã được duyệt",
-  "notification.evidence.approved.content": "Bằng chứng ngày {{day}} trong thử thách '{{challengeName}}' đã được duyệt. Tiếp tục cố gắng nhé!",
-  "notification.evidence.rejected.title": "Bằng chứng ngày {{day}} bị từ chối",
-  "notification.evidence.rejected.content": "Bằng chứng ngày {{day}} trong thử thách '{{challengeName}}' đã bị từ chối. Vui lòng kiểm tra góp ý và nộp lại nếu cần.",
+  "notification.evidence.approved.title": "Proof on {{day}} approved",
+  "notification.evidence.approved.content": "Your proof submitted on {{day}} in the challenge '{{challengeName}}' has been approved. Feedback: {{feedback}}",
+  "notification.evidence.rejected.title": "Proof on {{day}} rejected",
+  "notification.evidence.rejected.content": "Your proof submitted on {{day}} in the challenge '{{challengeName}}' was rejected. Feedback: {{feedback}}. Please check and resubmit if needed.",
   "notification.challenge.title": "Lời mời tham gia thử thách",
   "notification.challenge.content": "{{inviterName}} đã mời bạn tham gia thử thách '{{challengeName}}'.",
   "notification.group.title": "Lời mời tham gia nhóm",
@@ -254,7 +254,7 @@
   "notification.kickedFromChallenge.content": "Bạn đã bị quản trị viên xóa khỏi thử thách '{{challengeName}}'.",
   "notification.empty": "Không có thông báo mới.",
   "notification.challengeStatusUpdated.title": "Trạng thái thử thách của bạn đã được cập nhật",
-  "notification.challengeStatusUpdated.content": "Thử thách '{{challengeName}}' đã được cập nhật và hiện có trạng thái '{{status}}'",
+  "notification.challengeStatusUpdated.content": "Thử thách '{{challengeName}}' đã được cập nhật trạng thái: {{status}}.{{#adminNote}} Ghi chú: {{adminNote}}{{/adminNote}}",
   "JoinsChallengeDetail": {
     "reportTab": "Phản hồi & Báo cáo",
     "groups": "Nhóm",
