--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -720,8 +720,73 @@
     "next": "Tiếp",
     "first": "Đầu tiên",
     "last": "Cuối cùng"
+  },
+  "achievement": {
+    "title": "Thành tích của bạn",
+    "of": "trong số",
+    "achieved": "thành tích đã mở khóa",
+    "totalProgress": "Tổng tiến độ",
+    "progress": "Tiến độ",
+    "earned": "Đạt được",
+    "community": "Cộng đồng",
+    "users": "người dùng",
+    "unlocked": "ĐÃ MỞ KHÓA",
+    "locked": "CHƯA MỞ KHÓA",
+    "prev": "Trước",
+    "next": "Tiếp",
+    "notYetEarned": "Chưa đạt được",
+    "fitnessChampion": "Nhà vô địch thể hình",
+    "fitnessChampionDesc": "Xếp hạng trong top 10 của một thách thức hàng tháng.",
+    "peakPerformer": "Người thực hiện đỉnh cao",
+    "peakPerformerDesc": "Hoàn thành chương trình tập luyện cường độ cao.",
+    "perfectForm": "Hình thức hoàn hảo",
+    "perfectFormDesc": "Nhận điểm số hoàn hảo về kỹ thuật tập luyện.",
+    "risingAthlete": "Vận động viên đang lên",
+    "risingAthleteDesc": "Cải thiện điểm thể lực 50% trong một tháng.",
+    "quickStarter": "Người khởi đầu nhanh",
+    "quickStarterDesc": "Hoàn thành 5 bài tập khác nhau trong một ngày.",
+    "trainingStreak": "Chuỗi tập luyện",
+    "trainingStreakDesc": "Chuỗi 10 ngày liên tiếp hoàn thành bài tập.",
+    "hiitMaster": "Bậc thầy HIIT",
+    "hiitMasterDesc": "Hoàn thành bài tập HIIT với thời gian hoàn hảo.",
+    "teamPlayer": "Tinh thần đồng đội",
+    "teamPlayerDesc": "Hoàn thành 10 bài tập nhóm.",
+    "workoutPlanner": "Người lập kế hoạch tập luyện",
+    "workoutPlannerDesc": "Tạo và hoàn thành kế hoạch tập luyện tùy chỉnh.",
+    "eliteAthlete": "Vận động viên ưu tú",
+    "eliteAthleteDesc": "Duy trì xếp hạng thể lực top 5% trong một tháng.",
+    "challengeCreator": "Người tạo thách thức",
+    "challengeCreatorDesc": "Tạo một thách thức tập luyện với hơn 100 người tham gia.",
+    "fitnessMentor": "Người hướng dẫn thể hình",
+    "fitnessMentorDesc": "Giúp 20 người dùng khác cải thiện kỹ thuật tập luyện.",
+    "cardioKing": "Vua tim mạch",
+    "cardioKingDesc": "Chiến thắng 3 thử thách tim mạch liên tiếp.",
+    "calorieCrusher": "Kẻ đốt calo",
+    "calorieCrusherDesc": "Đốt 5.000 calo trong một tuần.",
+    "crossTrainer": "Người tập đa dạng",
+    "crossTrainerDesc": "Hoàn thành bài tập trong 5 danh mục thể hình khác nhau.",
+    "progressTracker": "Người theo dõi tiến độ",
+    "progressTrackerDesc": "Ghi chép bài tập trong 30 ngày liên tiếp.",
+    "globalAthlete": "Vận động viên toàn cầu",
+    "globalAthleteDesc": "Tham gia tập luyện với người dùng từ 5 quốc gia khác nhau.",
+    "mindBodyMaster": "Bậc thầy thể chất tinh thần",
+    "mindBodyMasterDesc": "Hoàn thành 10 buổi tập chánh niệm và yoga.",
+    "balancedDiet": "Chế độ ăn cân bằng",
+    "balancedDietDesc": "Ghi chép mục tiêu dinh dưỡng trong 25 ngày.",
+    "strengthChampion": "Nhà vô địch sức mạnh",
+    "strengthChampionDesc": "Thiết lập 10 kỷ lục cá nhân trong các bài tập sức mạnh.",
+    "enduranceBuilder": "Người xây dựng sức bền",
+    "enduranceBuilderDesc": "Hoàn thành thử thách sức bền kéo dài 2 giờ.",
+    "goalCrusher": "Người chinh phục mục tiêu",
+    "goalCrusherDesc": "Đạt được 5 mục tiêu thể hình cá nhân.",
+    "fitnessLegend": "Huyền thoại thể hình",
+    "fitnessLegendDesc": "Đạt được cấp độ thể hình cao nhất trong hệ thống.",
+    "fitnessExplorer": "Người khám phá thể hình",
+    "fitnessExplorerDesc": "Thử các bài tập trong tất cả các danh mục thể hình.",
+    "activeLifestyle": "Lối sống năng động",
+    "activeLifestyleDesc": "Ghi lại hoạt động thể chất trong 60 ngày liên tiếp."
   }
-  }
+}
 
 
 
