--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -735,6 +735,96 @@
     "next": "Next",
     "first": "First",
     "last": "Last"
+  },
+  "achievement": {
+    "title": "Your Achievements",
+    "of": "of",
+    "achieved": "achievements unlocked",
+    "totalProgress": "Total Progress",
+    "progress": "Progress",
+    "earned": "Earned",
+    "community": "Community",
+    "users": "users",
+    "unlocked": "UNLOCKED",
+    "locked": "LOCKED",
+    "prev": "Prev",
+    "next": "Next",
+    "notYetEarned": "Not yet earned",
+
+    "fitnessChampion": "Fitness Champion",
+    "fitnessChampionDesc": "Ranked in the top 10 of a monthly challenge.",
+
+    "peakPerformer": "Peak Performer",
+    "peakPerformerDesc": "Completed an advanced intensity workout program.",
+
+    "perfectForm": "Perfect Form",
+    "perfectFormDesc": "Received a perfect score on workout technique.",
+
+    "risingAthlete": "Rising Athlete",
+    "risingAthleteDesc": "Improved fitness score by 50% in a month.",
+
+    "quickStarter": "Quick Starter",
+    "quickStarterDesc": "Completed 5 different workouts in a day.",
+
+    "trainingStreak": "Training Streak",
+    "trainingStreakDesc": "10-day streak of completing workouts.",
+
+    "hiitMaster": "HIIT Master",
+    "hiitMasterDesc": "Complete a HIIT workout with perfect timing.",
+
+    "teamPlayer": "Team Player",
+    "teamPlayerDesc": "Complete 10 group workouts.",
+
+    "workoutPlanner": "Workout Planner",
+    "workoutPlannerDesc": "Create a custom training plan and complete it.",
+
+    "eliteAthlete": "Elite Athlete",
+    "eliteAthleteDesc": "Maintain top 5% fitness rank for a month.",
+
+    "challengeCreator": "Challenge Creator",
+    "challengeCreatorDesc": "Create a workout challenge with 100+ participants.",
+
+    "fitnessMentor": "Fitness Mentor",
+    "fitnessMentorDesc": "Help 20 other users with their workout form.",
+
+    "cardioKing": "Cardio King",
+    "cardioKingDesc": "Win 3 consecutive cardio challenges.",
+
+    "calorieCrusher": "Calorie Crusher",
+    "calorieCrusherDesc": "Burn 5,000 calories in a week.",
+
+    "crossTrainer": "Cross-Trainer",
+    "crossTrainerDesc": "Complete workouts across 5 different fitness categories.",
+
+    "progressTracker": "Progress Tracker",
+    "progressTrackerDesc": "Log workouts for 30 consecutive days.",
+
+    "globalAthlete": "Global Athlete",
+    "globalAthleteDesc": "Join workouts with users from 5 different countries.",
+
+    "mindBodyMaster": "Mind-Body Master",
+    "mindBodyMasterDesc": "Complete 10 mindfulness and yoga sessions.",
+
+    "balancedDiet": "Balanced Diet",
+    "balancedDietDesc": "Log nutrition goals for 25 days.",
+
+    "strengthChampion": "Strength Champion",
+    "strengthChampionDesc": "Set 10 personal records in strength exercises.",
+
+    "enduranceBuilder": "Endurance Builder",
+    "enduranceBuilderDesc": "Complete a 2-hour endurance challenge.",
+
+    "goalCrusher": "Goal Crusher",
+    "goalCrusherDesc": "Achieve 5 personal fitness goals.",
+
+    "fitnessLegend": "Fitness Legend",
+    "fitnessLegendDesc": "Achieve the highest fitness level in the system.",
+
+    "fitnessExplorer": "Fitness Explorer",
+    "fitnessExplorerDesc": "Try workouts across all fitness categories.",
+
+    "activeLifestyle": "Active Lifestyle",
+    "activeLifestyleDesc": "Record physical activity for 60 days straight."
   }
 }
 
