GOBE-68 Challenge feature 1.2.1 Challenge Detail return more field, and My Group return available group one

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -289,7 +289,10 @@
     "verificationType": {
       "hostReview": "Host Review",
       "memberReview": "Member Review"
-    }
+    },
+    "loginRequired": "You need to log in first.",
+    "maxGroups": "Max Groups",
+    "maxMembersPerGroup": "Max Members per Group"
   },
 
   "ProgressTracking": {
