--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -141,52 +141,56 @@
     "enterKeyword": "Vui lòng nhập từ khóa."
   },
   "createChallenge": {
-    "create": "Tạo thử thách",
-    "isParticipate": "Có tham gia hay không",
-    "maxMembersPerGroup": "Số người trong 1 nhóm",
-    "maxParticipants": "Số người tham gia tối đa",
-    "maxGroups": "Số nhóm tham gia tối đa",
-    "creating": "Đang tạo thử thách...",
-    "success": "Tạo thử thách thành công!",
     "editTitle": "Chỉnh sửa thử thách",
-    "successUpdate": "Cập nhật thử thách thành công!",
-    "updating": "Đang cập nhật...",
     "update": "Cập nhật",
+    "updating": "Đang cập nhật...",
+    "successUpdate": "Cập nhật thử thách thành công!",
+    "editFail": "Cập nhật thử thách thất bại: ",
+    "editValidationError": "Vui lòng điền đầy đủ thông tin bắt buộc.",
     "generalInfo": "Thông tin chung",
-    "details": "Chi tiết thử thách",
     "name": "Tên thử thách",
     "namePlaceholder": "Nhập tên thử thách",
     "summary": "Tóm tắt",
-    "summaryPlaceholder": "Tóm tắt ngắn gọn về thử thách",
-    "banner": "Ảnh bìa (không bắt buộc)",
+    "summaryPlaceholder": "Mô tả ngắn gọn",
+    "banner": "Banner (Không bắt buộc)",
+    "clickUpload": "Bấm hoặc kéo thả để tải lên",
     "picture": "Ảnh thử thách",
-    "pictureNote": "Định dạng chấp nhận: JPG, PNG. Dung lượng tối đa: 2MB.",
-    "clickUpload": "Nhấn hoặc kéo tệp vào để tải lên",
+    "pictureNote": "Kích thước khuyến nghị: 800x400px",
+    "details": "Chi tiết thử thách",
     "startDate": "Ngày bắt đầu",
     "endDate": "Ngày kết thúc",
-    "privacy": "Chế độ hiển thị",
+    "privacy": "Quyền riêng tư",
+    "isParticipate": "Tùy chọn tham gia",
+    "joinCheckbox": "Tôi muốn tham gia sau khi tạo",
     "verificationType": {
-      "label": "Cách xác minh",
-      "hostReview": "Chủ thử thách xác minh",
-      "memberReview": "Thành viên xác minh lẫn nhau"
+      "label": "Phương thức xác minh",
+      "memberReview": "Thành viên đánh giá",
+      "hostReview": "Chủ thử thách đánh giá"
     },
     "participationType": {
       "label": "Hình thức tham gia",
       "individual": "Cá nhân",
       "group": "Nhóm"
     },
-
-      "join": "Tham gia",
-      "not join": "Không tham gia",
-
     "challengeType": "Loại thử thách",
     "selectChallengeType": "Chọn loại thử thách",
     "maxParticipants": "Số người tham gia tối đa",
-    "description": "Mô tả thử thách",
+    "maxGroups": "Số nhóm tối đa",
+    "maxMembersPerGroup": "Số thành viên tối đa mỗi nhóm",
+    "selectGroup": "Chọn nhóm",
+    "selectGroupPlaceholder": "Chọn một nhóm",
+    "members": "thành viên",
+    "description": "Mô tả",
+    "create": "Tạo",
     "cancel": "Hủy",
-    "validationError": "Vui lòng sửa tất cả lỗi trước khi gửi.",
-    "fail": "Cập nhật thất bại: "
+    "creating": "Đang tạo...",
+    "success": "Tạo thử thách thành công!",
+    "fail": "Tạo thử thách thất bại: ",
+    "validationError": "Vui lòng điền đầy đủ thông tin bắt buộc."
   },
+  "public": "Công khai",
+  "private": "Riêng tư",
+
   "ProofUpLoads": {
     "loading": "Đang tải dữ liệu",
     "view evidence": "Danh sách bằng chứng",
@@ -256,6 +260,10 @@
   "notification.challengeStatusUpdated.title": "Trạng thái thử thách của bạn đã được cập nhật",
   "notification.challengeStatusUpdated.content": "Thử thách '{{challengeName}}' đã được cập nhật trạng thái: {{status}}.{{#adminNote}} Ghi chú: {{adminNote}}{{/adminNote}}",
   "JoinsChallengeDetail": {
+    "confirmCancelTitle": "Xác nhận hủy thử thách",
+    "confirmCancelMessage": "Bạn có chắc chắn muốn hủy thử thách này không?",
+    "confirmCancelNo": "Không, giữ lại",
+    "confirmCancelYes": "Có, hủy thử thách",
     "reportTab": "Phản hồi & Báo cáo",
     "groups": "Nhóm",
     "disabledDuringChallenge": "Hành động này bị tắt khi thử thách đã diễn ra hoặc kết thúc.",
@@ -808,6 +816,26 @@
     "member": "Thành viên",
     "notLeaderTooltip": "Bạn không phải trưởng nhóm. Vui lòng chọn nhóm bạn sở hữu.",
     "notExactMembersTooltip": "Nhóm này không có đúng {{number}} thành viên."
+  },
+  "MemberManagement": {
+    "title": "Quản lý thành viên",
+    "searchPlaceholder": "Tìm kiếm theo tên hoặc email...",
+    "member": "Thành viên",
+    "role": "Vai trò",
+    "participate": "Tham gia",
+    "coHost": "Co-host",
+    "actions": "Hành động",
+    "me": "Tôi",
+    "prev": "Trước",
+    "next": "Tiếp",
+    "kickSuccess": "Đã xóa thành viên thành công!",
+    "kickFail": "Xóa thành viên thất bại.",
+    "toggleSuccess": "Cập nhật vai trò thành công!",
+    "toggleFail": "Cập nhật vai trò thất bại.",
+    "confirmKickTitle": "Xác nhận xóa",
+    "confirmKickMessage": "Bạn có chắc chắn muốn xóa {{name}} khỏi thử thách không?",
+    "cancel": "Hủy",
+    "confirm": "Xác nhận"
   }
 }
 
