--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -167,50 +167,55 @@
     "enterKeyword": "Please enter a keyword."
   },
   "createChallenge": {
-    "create": "Create Challenge",
-    "creating": "Creating Challenge",
-    "maxMembersPerGroup": "Số người trong 1 nhóm",
-    "success": "Challenge created successfully!",
     "editTitle": "Edit Challenge",
-    "successUpdate": "Challenge updated successfully!",
-    "updating": "Updating...",
     "update": "Update",
+    "updating": "Updating...",
+    "successUpdate": "Challenge updated successfully!",
+    "editFail": "Failed to update challenge: ",
+    "editValidationError": "Please fill all required fields.",
     "generalInfo": "General Information",
-    "details": "Challenge Details",
     "name": "Challenge Name",
     "namePlaceholder": "Enter challenge name",
     "summary": "Summary",
-    "summaryPlaceholder": "Brief summary of the challenge",
-    "banner": "Banner (optional)",
-    "picture": "Challenge Image",
-    "pictureNote": "Accepted formats: JPG, PNG. Max size 2MB.",
-    "clickUpload": "Click or drag file to upload",
+    "summaryPlaceholder": "Short summary",
+    "banner": "Banner (Optional)",
+    "clickUpload": "Click or Drag to upload",
+    "picture": "Challenge Picture",
+    "pictureNote": "Recommended size: 800x400px",
+    "details": "Challenge Details",
     "startDate": "Start Date",
     "endDate": "End Date",
     "privacy": "Privacy",
+    "isParticipate": "Participation Option",
+    "joinCheckbox": "I want to participate after creating",
     "verificationType": {
-      "label": "Verification Type",
-      "hostReview": "Host Review",
-      "memberReview": "Member Review"
+      "label": "Verification Method",
+      "memberReview": "Member Review",
+      "hostReview": "Host Review"
     },
     "participationType": {
       "label": "Participation Type",
       "individual": "Individual",
       "group": "Group"
     },
-    "isParticipate": {
-      "join": "Join",
-      "not join": "Not join"
-    },
     "challengeType": "Challenge Type",
-    "selectChallengeType": "Select challenge type",
-    "maxParticipants": "Maximum Participants",
-    "description": "Challenge Description",
+    "selectChallengeType": "Select Challenge Type",
+    "maxParticipants": "Max Participants",
+    "maxGroups": "Max Groups",
+    "maxMembersPerGroup": "Max Members per Group",
+    "selectGroup": "Select Group",
+    "selectGroupPlaceholder": "Select a group to join",
+    "members": "members",
+    "description": "Description",
+    "create": "Create",
     "cancel": "Cancel",
-    "validationError": "Please correct all errors before submitting.",
-    "fail": "Failed to update challenge: ",
-    "joinCheckbox": "Join this challenge yourself?"
+    "creating": "Creating...",
+    "success": "Challenge created successfully!",
+    "fail": "Failed to create challenge: ",
+    "validationError": "Please fill all required fields."
   },
+  "public": "Public",
+  "private": "Private",
   "ProofUploads": {
     "loading": "Loading data",
     "viewEvidence": "View all evidences",
@@ -388,6 +393,10 @@
   },
 
   "JoinsChallengeDetail": {
+    "confirmCancelTitle": "Confirm Cancellation",
+    "confirmCancelMessage": "Are you sure you want to cancel this challenge?",
+    "confirmCancelNo": "No, Keep",
+    "confirmCancelYes": "Yes, Cancel",
     "reportTab": "Feedback & Reports",
     "groups": "Groups",
     "disabledDuringChallenge": "This action is disabled during or after the challenge.",
@@ -850,6 +859,26 @@
     "member": "Member",
     "notLeaderTooltip": "You are not the leader of this group. Please select a group you own.",
     "notExactMembersTooltip": "This group does not have exactly {{number}} members."
+  },
+  "MemberManagement": {
+    "title": "Member Management",
+    "searchPlaceholder": "Search by name or email...",
+    "member": "Member",
+    "role": "Role",
+    "participate": "Participate",
+    "coHost": "Co-host",
+    "actions": "Actions",
+    "me": "Me",
+    "prev": "Previous",
+    "next": "Next",
+    "kickSuccess": "Member kicked successfully!",
+    "kickFail": "Failed to kick member.",
+    "toggleSuccess": "Updated role successfully!",
+    "toggleFail": "Failed to update role.",
+    "confirmKickTitle": "Confirm Kick",
+    "confirmKickMessage": "Are you sure you want to kick {{name}} from the challenge?",
+    "cancel": "Cancel",
+    "confirm": "Confirm"
   }
 }
 
