--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -48,6 +48,7 @@
   "updateProfile": "Cập nhật hồ sơ",
   "selectChallengeType": "Chọn kiểu thử thách",
   "challengeInvite": {
+    "memberAlreadyJoined": "{{name}} đã tham gia thử thách này rồi.",
     "memberList": "Danh sách thành viên",
     "searchPlaceholder": "Tìm kiếm theo tên hoặc email...",
     "search": "Tìm kiếm",
@@ -141,13 +142,19 @@
     "enterKeyword": "Vui lòng nhập từ khóa."
   },
   "createChallenge": {
+    "create": "Tạo thử thách",
+    "isParticipate": "Có tham gia hay không",
+    "maxMembersPerGroup": "Số người trong 1 nhóm",
+    "maxParticipants": "Số người tham gia tối đa",
+    "maxGroups": "Số nhóm tham gia tối đa",
+    "creating": "Đang tạo thử thách...",
+    "success": "Tạo thử thách thành công!",
     "editTitle": "Chỉnh sửa thử thách",
-    "update": "Cập nhật",
-    "updating": "Đang cập nhật...",
     "successUpdate": "Cập nhật thử thách thành công!",
     "editFail": "Cập nhật thử thách thất bại: ",
     "editValidationError": "Vui lòng điền đầy đủ thông tin bắt buộc.",
     "generalInfo": "Thông tin chung",
+    "details": "Chi tiết thử thách",
     "name": "Tên thử thách",
     "namePlaceholder": "Nhập tên thử thách",
     "summary": "Tóm tắt",
@@ -155,8 +162,8 @@
     "banner": "Banner (Không bắt buộc)",
     "clickUpload": "Bấm hoặc kéo thả để tải lên",
     "picture": "Ảnh thử thách",
-    "pictureNote": "Kích thước khuyến nghị: 800x400px",
-    "details": "Chi tiết thử thách",
+    "pictureNote": "Định dạng chấp nhận: JPG, PNG. Dung lượng tối đa: 2MB.",
+    "clickUpload": "Nhấn hoặc kéo tệp vào để tải lên",
     "startDate": "Ngày bắt đầu",
     "endDate": "Ngày kết thúc",
     "privacy": "Quyền riêng tư",
@@ -172,11 +179,13 @@
       "individual": "Cá nhân",
       "group": "Nhóm"
     },
+    "join": "Tham gia",
+    "not join": "Không tham gia",
     "challengeType": "Loại thử thách",
     "selectChallengeType": "Chọn loại thử thách",
     "maxParticipants": "Số người tham gia tối đa",
     "maxGroups": "Số nhóm tối đa",
-    "maxMembersPerGroup": "Số thành viên tối đa mỗi nhóm",
+    "maxMembersPerGroup": "Số thành viên mỗi nhóm",
     "selectGroup": "Chọn nhóm",
     "selectGroupPlaceholder": "Chọn một nhóm",
     "members": "thành viên",
@@ -184,9 +193,14 @@
     "create": "Tạo",
     "cancel": "Hủy",
     "creating": "Đang tạo...",
-    "success": "Tạo thử thách thành công!",
+    "success": " Thành công!",
     "fail": "Tạo thử thách thất bại: ",
-    "validationError": "Vui lòng điền đầy đủ thông tin bắt buộc."
+    "validationError": "Vui lòng điền đầy đủ thông tin bắt buộc.",
+    "groupMinMemberNote": "Mỗi nhóm phải có ít nhất 2 thành viên",
+    "confirm": "Đồng ý",
+    "selectWarning": "Vui lòng chọn một nhóm trước khi tiếp tục.",
+    "successJoinGroupChallenge": "Bạn đã tham gia thử thách thành công với nhóm đã chọn.",
+    "inviteFailed": "Đã xảy ra lỗi khi xử lý lời mời. Vui lòng thử lại."
   },
   "public": "Công khai",
   "private": "Riêng tư",
@@ -733,110 +747,62 @@
     "last": "Cuối cùng"
   },
   "achievement": {
-    "title": "Thành tích của bạn",
-    "of": "trong số",
-    "achieved": "thành tích đã mở khóa",
-    "totalProgress": "Tổng tiến độ",
-    "progress": "Tiến độ",
-    "earned": "Đạt được",
-    "community": "Cộng đồng",
-    "users": "người dùng",
-    "unlocked": "ĐÃ MỞ KHÓA",
-    "locked": "CHƯA MỞ KHÓA",
-    "prev": "Trước",
-    "next": "Tiếp",
-    "notYetEarned": "Chưa đạt được",
-    "fitnessChampion": "Nhà vô địch thể hình",
-    "fitnessChampionDesc": "Xếp hạng trong top 10 của một thách thức hàng tháng.",
-    "peakPerformer": "Người thực hiện đỉnh cao",
-    "peakPerformerDesc": "Hoàn thành chương trình tập luyện cường độ cao.",
-    "perfectForm": "Hình thức hoàn hảo",
-    "perfectFormDesc": "Nhận điểm số hoàn hảo về kỹ thuật tập luyện.",
-    "risingAthlete": "Vận động viên đang lên",
-    "risingAthleteDesc": "Cải thiện điểm thể lực 50% trong một tháng.",
-    "quickStarter": "Người khởi đầu nhanh",
-    "quickStarterDesc": "Hoàn thành 5 bài tập khác nhau trong một ngày.",
-    "trainingStreak": "Chuỗi tập luyện",
-    "trainingStreakDesc": "Chuỗi 10 ngày liên tiếp hoàn thành bài tập.",
-    "hiitMaster": "Bậc thầy HIIT",
-    "hiitMasterDesc": "Hoàn thành bài tập HIIT với thời gian hoàn hảo.",
-    "teamPlayer": "Tinh thần đồng đội",
-    "teamPlayerDesc": "Hoàn thành 10 bài tập nhóm.",
-    "workoutPlanner": "Người lập kế hoạch tập luyện",
-    "workoutPlannerDesc": "Tạo và hoàn thành kế hoạch tập luyện tùy chỉnh.",
-    "eliteAthlete": "Vận động viên ưu tú",
-    "eliteAthleteDesc": "Duy trì xếp hạng thể lực top 5% trong một tháng.",
-    "challengeCreator": "Người tạo thách thức",
-    "challengeCreatorDesc": "Tạo một thách thức tập luyện với hơn 100 người tham gia.",
-    "fitnessMentor": "Người hướng dẫn thể hình",
-    "fitnessMentorDesc": "Giúp 20 người dùng khác cải thiện kỹ thuật tập luyện.",
-    "cardioKing": "Vua tim mạch",
-    "cardioKingDesc": "Chiến thắng 3 thử thách tim mạch liên tiếp.",
-    "calorieCrusher": "Kẻ đốt calo",
-    "calorieCrusherDesc": "Đốt 5.000 calo trong một tuần.",
-    "crossTrainer": "Người tập đa dạng",
-    "crossTrainerDesc": "Hoàn thành bài tập trong 5 danh mục thể hình khác nhau.",
-    "progressTracker": "Người theo dõi tiến độ",
-    "progressTrackerDesc": "Ghi chép bài tập trong 30 ngày liên tiếp.",
-    "globalAthlete": "Vận động viên toàn cầu",
-    "globalAthleteDesc": "Tham gia tập luyện với người dùng từ 5 quốc gia khác nhau.",
-    "mindBodyMaster": "Bậc thầy thể chất tinh thần",
-    "mindBodyMasterDesc": "Hoàn thành 10 buổi tập chánh niệm và yoga.",
-    "balancedDiet": "Chế độ ăn cân bằng",
-    "balancedDietDesc": "Ghi chép mục tiêu dinh dưỡng trong 25 ngày.",
-    "strengthChampion": "Nhà vô địch sức mạnh",
-    "strengthChampionDesc": "Thiết lập 10 kỷ lục cá nhân trong các bài tập sức mạnh.",
-    "enduranceBuilder": "Người xây dựng sức bền",
-    "enduranceBuilderDesc": "Hoàn thành thử thách sức bền kéo dài 2 giờ.",
-    "goalCrusher": "Người chinh phục mục tiêu",
-    "goalCrusherDesc": "Đạt được 5 mục tiêu thể hình cá nhân.",
-    "fitnessLegend": "Huyền thoại thể hình",
-    "fitnessLegendDesc": "Đạt được cấp độ thể hình cao nhất trong hệ thống.",
-    "fitnessExplorer": "Người khám phá thể hình",
-    "fitnessExplorerDesc": "Thử các bài tập trong tất cả các danh mục thể hình.",
-    "activeLifestyle": "Lối sống năng động",
-    "activeLifestyleDesc": "Ghi lại hoạt động thể chất trong 60 ngày liên tiếp."
-  },
+    "label": {
+      "title": "Thành tựu của bạn",
+      "progress": "Tiến trình",
+      "earned": "Đạt được:",
+      "notYetEarned": "Chưa đạt",
+      "locked": "CHƯA MỞ",
+      "unlocked": "ĐÃ MỞ",
+      "totalProgress": "Tổng tiến trình",
+      "of": "trong",
+      "achievementsUnlocked": "thành tựu đã mở",
+      "next": "Tiếp",
+      "prev": "Trước",
+      "loading": "Đang tải thành tựu...",
+      "error": "Không thể tải thành tựu."
+    },
+    "description": {
+      "FIRST_TRY": "Tham gia thử thách đầu tiên.",
+      "DAILY_WARRIOR": "Hoàn thành 7 bài nộp liên tiếp.",
+      "PROFILE_MASTER": "Điền đầy đủ thông tin hồ sơ.",
+      "INVITER": "Mời 1 thành viên vào thử thách thành công.",
+      "REVIEWER": "Đã đánh giá 10 bằng chứng.",
+      "PERFECT_ACCURACY": "Một bài nộp được duyệt 100%.",
+      "COMEBACK_SUBMITTER": "Nộp bài sau hơn 7 ngày không hoạt động.",
+      "RISING_STAR": "3 bài nộp được duyệt liên tiếp.",
+      "ACTIVE_VOTER": "Vote ở 5 thử thách khác nhau.",
+      "GROUP_HERO": "Dẫn dắt nhóm hoàn thành thử thách.",
+      "CONTRIBUTOR": "Tham gia ít nhất 3 thử thách.",
+      "STREAK_TRIPLE": "Chuỗi 3 ngày liên tục nộp bài.",
+      "STREAK_MASTER": "Chuỗi 10 ngày liên tục nộp bài.",
+      "NIGHT_OWL": "Nộp bài trong khoảng 0h–4h sáng.",
+      "EARLY_BIRD": "Nộp bài trước 6h sáng.",
+      "LONG_HAUL": "Hoàn thành thử thách 30 ngày.",
+      "FITNESS_CHAMPION": "Xếp hạng top 10 trong thử thách.",
+      "GROUP_LEGEND": "Nhóm xếp hạng nhất bảng.",
+      "CONSISTENT_TOPPER": "Top 3 liên tiếp 3 thử thách.",
+      "UNDERDOG": "Khởi đầu chậm nhưng bứt phá mạnh mẽ."
+    },
 
-  "SelectGroupModal": {
-    "title": "Chọn Nhóm",
-    "searchPlaceholder": "Tìm kiếm nhóm của bạn...",
-    "filterExactMembers": "Chỉ hiển thị nhóm có đúng {{number}} thành viên",
-    "noGroups": "Không tìm thấy nhóm phù hợp.",
-    "prev": "Trước",
-    "next": "Sau",
+  "Moderation": {
+    "unableToAnalyze": "Không phân tích được nội dung.",
+    "rejectedBySummary": "Video vi phạm theo kiểm duyệt.",
+    "fileTooLarge": "File quá lớn. Vui lòng chọn file nhỏ hơn 100MB.",
+    "videoRejected": "Video bị từ chối!",
+    "uploadSuccess": "Nộp bằng chứng thành công!",
+    "errorDuringSubmit": "Đã xảy ra lỗi khi xử lý.",
+    "submitEvidence": "Nộp bằng chứng ngày",
+    "clickToUpload": "Click để tải lên",
+    "orDragDrop": "hoặc kéo thả",
+    "acceptedFormats": "JPG, PNG, MP4, GIF (tối đa 800x400px)",
+    "changeFile": "Thay đổi file",
     "cancel": "Hủy",
-    "join": "Tham gia thử thách",
-    "joining": "Đang tham gia...",
-    "joinSuccess": "Tham gia thử thách thành công!",
-    "joinFail": "Tham gia thất bại. Vui lòng thử lại.",
-    "selectGroupFirst": "Vui lòng chọn một nhóm trước!",
-    "yourRole": "Vai trò của bạn",
-    "owner": "Trưởng nhóm",
-    "member": "Thành viên",
-    "notLeaderTooltip": "Bạn không phải trưởng nhóm. Vui lòng chọn nhóm bạn sở hữu.",
-    "notExactMembersTooltip": "Nhóm này không có đúng {{number}} thành viên."
-  },
-  "MemberManagement": {
-    "title": "Quản lý thành viên",
-    "searchPlaceholder": "Tìm kiếm theo tên hoặc email...",
-    "member": "Thành viên",
-    "role": "Vai trò",
-    "participate": "Tham gia",
-    "coHost": "Co-host",
-    "actions": "Hành động",
-    "me": "Tôi",
-    "prev": "Trước",
-    "next": "Tiếp",
-    "kickSuccess": "Đã xóa thành viên thành công!",
-    "kickFail": "Xóa thành viên thất bại.",
-    "toggleSuccess": "Cập nhật vai trò thành công!",
-    "toggleFail": "Cập nhật vai trò thất bại.",
-    "confirmKickTitle": "Xác nhận xóa",
-    "confirmKickMessage": "Bạn có chắc chắn muốn xóa {{name}} khỏi thử thách không?",
-    "cancel": "Hủy",
-    "confirm": "Xác nhận"
+    "submit": "Gửi",
+    "processing": "Đang xử lý..."
   }
+}
+
 }
 
 
